# yolov8-streamlit

./: .gitignore  README.md  app.py  pyproject.toml
