[project]
name = "yolov8-streamlit"
version = "0.1.0"
description = "A Streamlit app for object detection with YOLOv8"
license = { file = "LICENSE" }
authors = [{ name = "Eduardo González", email = "edugonzalezvaq@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8,<3.12"
dependencies = [
    "streamlit>=1.38.0",
    "ultralytics>=8.2.102",
]
