[project]
name = "yolov8-streamlit"
version = "0.1.0"
description = "A Streamlit app for object detection with YOLOv8"
license = { file = "LICENSE" }
authors = [{ name = "Eduardo González", email = "edugonzalezvaq@gmail.com" }]
readme = "README.md"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"
ultralytics = "^8.2.102"
streamlit = "^1.38.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
